package examples.trees;

import java.awt.Graphics;
public interface TreeI {
    void draw(Graphics g);
}
